--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bfhl-api",
   "version": "1.0.0",
+  "type": "module",
   "description": "BFHL /bfhl POST API - filters array items and returns categorized data per VIT question paper",
   "main": "src/index.js",
   "scripts": {
